--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Conecta JP</title>
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6pTWDw8Sm1cNj2i6_lILmA9cBk1diTAg&callback=console.debug&libraries=maps,marker&v=beta"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
