add: Skeleton screen

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500&display=swap" rel="stylesheet">
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6pTWDw8Sm1cNj2i6_lILmA9cBk1diTAg&callback=console.debug&libraries=maps,marker&v=beta"></script>
+    <link rel="stylesheet" href="./src/css/initial-style.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading-div" clas>
+        <div class="loadding"></div>
+      </div>
+    </div>
     <script type="module" src="./src/main.tsx"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
