--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="author" content="Rômulo Henri">
     <meta name="application-name" content="ConectaJP">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conecta JP</title>   
+    <title>Conecta JP</title>
+    <link rel="shortcut icon" href="./logo1.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500&display=swap" rel="stylesheet">
